--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,8 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^0.1.2
-
+  audioplayers: ^0.19.1
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
